parallel programming in practice

--- a/masters/HPC/Teoria/7.ParallelProgrammingPractice.md
+++ b/masters/HPC/Teoria/7.ParallelProgrammingPractice.md
@@ -162,6 +162,9 @@ if ((diff /(n*n)) < TOLERANCE)
 
 Continuiamo ad aggiornare i punti passando su tutta la grigilia fino a raggiungere la convergenza.   
 
+
+---
+
 **Dependency Analysis:**   
 Per sapere se possiamo parallelizzare due operazioni usiamo la **Condizione di Bernstein**:   
 
@@ -176,6 +179,7 @@ Diremo che due task $T_1$ e $T_2$ sono paralleli se e solo se:
 Tutte queste 3 regole devono essere contemporaneamente vere, se solo una non lo è allora 
 non si può parallelizare (senza usare sincronizzazione).   
 
+---
 
 Applichiamo Bernstein al nostro algoritmo, vogliamo vedere se possiamo calcolare in parallelo due punti vicini:  
 - task1 calcola il punto `A[i,j]`   
@@ -249,4 +253,195 @@ Risulta perfettamente bilanciato e senza sprechi.
 _Nota_: Usiamo l'assignment statico anche quando i task sono diversi ma il carico totale è conosciuto! se sapessimo a priori che alcuni task sono lunghi e altri corti potremmo dare a th0 un task lungo e uno piccolo, mentre algi altri th diamo task medi. Se riusciamo a fare si che la somma del lavoro che devono fare i th sia la stessa, abbiamo vinto.  
 
 **Conclusione:** L'assegnazione stastica è la migliore se conosciamo il carico di lavoro in anticipo.  
+
+
+
+### Dynamic Assignemnt 
+
+Modello da applicare nel caso il caico di lavoro sia imprevedibile! se assegniamo staticamente i job ai processori e una specifica parte dei job è molto più pesante degli altri (numeri primi grandi), allora il processore che riceve i job pesanti ci metterà molto più tempo sbilanciando il carico.  
+
+Possiamo usare una **Work Queue**:
+
+```cpp
+const int N = 1024;
+const int GRANULARITY = 10;
+
+LOCK counter_lock;
+bool* is_prime = new bool[N];
+int counter = 0;
+
+while(1)
+{
+    int i;
+    lock(counter_lock);
+    i = counter;
+    counter += GRANULARITY
+    unlock(counter_lock);
+    if(i>=N)
+    {
+        break;
+    }
+    int end = min(i+GRANULARITY, N);
+    for(int j = i; j<end;j++)
+    {
+        is_prime[j] == test_primality(x[j]);
+    }
+    
+}
+```
+
+I thread si autobilanciano, se un thread finisce presto il suo numero allora torna al contantore/coda e prende un altro task. Se un thread ci mette tanto per un task allora prenderà meno task totali!  
+Sono i thread che apena sono liberi fanno pull del lavoro dalla coda.   
+
+**Task Granularity**: È fondamentale usare una unità di granularità sensata, se usassimo un singolo lavoro per thread e se la nostra funzione test_primality fosse veloce, allora avremmo un alta contenzione del lock, tantissimi thread si mettono in coda per prendere il lock, in questo modo muore il parallelismo e torniamo al sequenziale.  
+
+Usare una granularità di 10 task permette di avere meno contenzione del lock e maggiori performance, varia di caso in caso, bisogna sapere analizzare e individuare il funzionamento del problema.  
+
+**Scegliere la granularità:**  
+- Task piccoli: hanno il vantaggio di avere un buon load balancing di natura, se rimane un po' di lavoro è un pezzetto piccolo, gli altri thread non aspettano a lungo (occhio all'overhead!)  
+- Task grandi: hanno poco overhead, gestiscono meno burocrazia (occhi al load balancing!)
+
+**Smart Task Scheduling:**  
+- approccio naive: creare una work queue FIFO, ma se ci sono task significativamente più grandi di altri e mettiamo tutto in fila allora il processore che prende il task grande ci metterà molto più tempo dei processori che prendono task piccoli, rallentando il sistema.  
+
+Usiamo una tecnica di scheduling molto famosa: **Longest Processing Time** 
+- si mette il task grande all'inizio 
+- il processore che lo prende inizia a lavorarci, rimangono tanti task piccoli nella coda
+- mentre il processore lavora al task lungo gli altri consumano i task piccoli riempendo i buchi temporali
+
+Per applicare questa tecnica bisogna conoscere il workload, se non sai qual'è il task lungo (o se ce ne sono proprio) non puoi ordinare la coda.  
+
+
+La soluzione migliore prevede l'utilizzo di code di task **distribuite** per evitare rallentamenti dovuti a lock (una sola coda centrale = tutti litigano per lo stesso lock).  
+
+- Ogni thread ha la sua coda privata 
+- Quando un thread genera nuovo lavoro o ne cerca, guarda nella sua coda, senza dover chiedere permesso a nessuno $\rightarrow$ velocissimo  
+- Se la coda è vuota $\rightarrow$ **Work Stealing**  
+    - se t1 finisce il lavoro sulla sua coda NON va a dormire 
+    - guarda la coda degli altri thread, se threadN ha ancora work nella sua coda allora th1 prende un task dal fondo della coda di threadN.  
+    - il bilanciamento avviene quando serve e la contesa è rara.  
+
+
+# 3. Orchestrazione 
+
+Corrisponde alla fase in cui coordiniamo i thread, in particolare:
+- structuing communication: quale thread parla con quale thread 
+- synchronization: quando serve 
+- data structures: come organizziamo la memoria
+
+**L'obiettivo** è ridurre i costi di comunicazione e preservare la località dei dati.  
+Es: esempio nelle slide di blocked vs interleaved execution, dove la prima ha un maggior vantaggio di località e riduce lo scambio di dati.  
+
+Esistono due filosofie per implementare questa fase e si distinguono dall'architettura:
+
+1. **SPMD / single program multiple data**:     
+    - uso i threads, shared memory, barriere e lock   
+    Si scrive un singolo file di codice e quando viene lanciato si creano i vari thread, tutti e 4 i thread eseguono quel codice, da inizio a fine.   
+    Ogni thread ha un `id` diverso, grazie a questo id possiamo fare lavorare i vari thread su porzioni diverse del programma.  
+
+
+2. **MPI / Message passing**:  
+    - ogni processore ha un proprio array locale e privato, devo esplicitare manualmente la comunicazione tra processori quando serve.    
+    Situazione di quando lavoriamo su un cluster, non c'è memoria condivisa, ogni nodo ha la sua RAM, dovremo usare MPI  
+    Es: nodo1 (ha la sua CPU, cache, RAM)  non può leggere la memoria del nodo2, l'unico modo è che la CPU del nodo2 impacchetti i dati e li spedisca su cavo (ethernet/infiband)  
+    Si comunica con: 
+        - `send(X, ... to thread2)`: prende dato x e lo spedisce al thread2 via rete 
+        - `recv(Y, ....)`: aspetta il pacchetto, e quando lo riceve lo mette nella sua varibile locale Y
+
+
+_Extra su MPI:_    
+
+
+**Ghost/Halo Rows**:  
+
+Siamo in questa situazione: thread2 (su nodo2) deve calcolare i valori della sua prima riga (esempio della matrice usato prima), per farlo la formula richiede l'ultima riga del thread1 (sul nodo1), e la stessa cosa la deve fare per prima riga del thread3 (sul nodo3).  
+Allora il thread2 deve allocare spazio extra nel suo array locale, oltre allo spazio per le sue righe deve allocare spazio per 2 righe extra, ossia l'ultima del thread1 e la prima del thread3.  
+
+**Riduzione globale - Master Thread**:  
+A differenza del modello SPMD qui ogni `diff` che calcoliamo è globale al nodo ma locale se vista dal sistema intero.  
+Noi vogliamo mettere insieme tutte queste diff, per farlo dobbiamo spedire i dati in rete a un nodo unico che farà la somma aggiungendo le varie diff dei diversi nodi.  
+Questo nodo prende il nome di master thread, e tutti i thread che hanno `id` != 0 dovranno spedire i propri dati a questo nodo, che riceve tutti i remote_diff e fa il controllo per la terminazione dell'algoritmo.  
+
+Nel modello SPMD usavamo i lock, qui dobbiamo spedire i dati esplicitamente.  
+
+**Synchronous send/recv**:  
+`send` e `recv` sono di default sincrone e bloccanti: 
+- il sender chiama `send()`
+    - il sistema copia i dati nel buffer di rete e invia il messaggio 
+    - il sender si **blocca** fino a quando non riceve l'`ack` dal receiver che conferma la ricezione 
+- il receiver chiama `recv()` 
+    - si blocca fino a quando non riceve qualcosa
+    - copia i dati nel buffer e manda un `ack` al mittente
+
+- Pericolo di deadlock: se th1 fa `recv` e th2 fa `recv` a sua volta, i thread si bloccano a vicenda aspettando per sempre! Bisogna stare molto attenti all'ordine, uno deve fare send e l'altro receive!   
+
+**Asynchronous send/recv**:  
+Le chiamate sincrone bloccano gli altri nodi, questo potrebbe diminuire il fattore di `overlap` e ricordiamo dalla formula di minimizzazione del costo di comunicazione, che il fattore di overlap è una variabile da massimizzare!  
+
+- `Isend()`: versione asincrona della send 
+    - viene invocata e il sistema operativo (grazie a DMA, senza non si può fare) spedisce il buffer con i dati 
+    - la funzione ritorna immediatamente, non aspetta un ack 
+    - **warning:** non puoi toccare il buffer subito dopo! il sistema lo sta ancora leggendo per spedirlo, se lo modifichi spedisci dati corrotti!  
+
+- `Irecv()`: versione asincrona della receive   
+    - dice al sistema di tenere pronto il buffer , prima o poi arriveranno dei dati lì! 
+    - ritorna immediatamente !
+    - **warning:** non puoi accedere subito dopo al buffer, potrebbe essere ancora vuoto!  
+
+
+<br>
+
+# Mapping to Hardware
+
+Il mapping consiste nell'assegnare ai core fisici della macchina / cluster i thread, ci sono 3 attori che possono prendere questa decisione:
+
+1. **Sistema Operativo (OS):** (pthreads)     
+
+    Il programmatore crea 1000 thread, l'OS vede che ha 4 core e decide lui momento per momento chi far girare e dove (con time sharing)  
+    PRO: facile per il programmatore 
+    CONTRO: L'OS non sa che magari il th1 e th2 parlano molto, magari li mette su due socket lontani rendendo la comunicazione lenta.  
+
+2. **Compilatore:** (openMP)  
+    Il compilatore (o libreria runtime) cercadi essere furbo e mappare i thread in modo ottimale 
+
+
+3. **Hardware:** (CUDA)  
+    Il programmatore lancia 10.000 thread su GPU, ed è l'hardware della GPU che decide quali mandaer in esecuzione sui core disponibili     
+
+
+
+**Decisioni Importanti:**  
+- Place related threads on same processor:  
+    Se due thread collaborano molto (condividono moltii dati nella cache L1) allora mettili vicini per massimizzare la località.  
+
+- Place unrelated threads on same processor:  
+    Se un thread fa tanti calcoli (compute bound) e un altro fa tanti accessi alla memoria (memory bound) mettili insieme! mentre uno usa l'ALU l'altro usa il BUS di memoria, sfrutti meglio l'hardware (resource saturation)
+
+Queste due decisioni sembrano contraddirsi, ma ovviamente sono da prendere in base al caso d'uso al quale ci troviamo davanti! Analizzare bene il problema è fondamentale.  
+
+
+# Performance Analysis: 
+
+Per ottimizzare un programma parallelo è fondamentale saperlo profilare, per conoscere le parti da migliorare.  
+
+1. **Identify Hotspots:** individuare dove passa la maggior parte del tempo il programma (ricorda: ahmdal's law)
+
+2. **Identify Bottlenecks:** individuare perchè il programma è lento  
+    - colpa della CPU (compute bound) ? della RAM (memory bound) ? dei lock (synch bound) ?  
+
+
+Per aiutarci possiamo stabilire delle **watermarks**, per scovare i bottle necks mofificando il codice in modo empirico:
+
+1. **add math:** aggiungiamo operazioni inutili sui dati locali che non cambiano la semantica del programma  
+    - se il tempo NON aumenta, significa che la CPU era scarica (stava aspettando la memoria), il collo di bottiglia è la memoria!  
+    - se il tempo aumenta linearmente allora eri già al limite della CPU 
+
+2. **remove math:** rimuovi i calcoli e lascia solamente le letture dei dati  
+    - se il tempo rimane alto $\rightarrow$ il programma è memory bound! la CPU non è la colpevole
+
+3. **change array access to A[0]:** invece di leggere A[i] (che causa cache miss) leggiamo sempre A[0] che è in cache.  
+    - se il programma diventa velocissimo significa che il problema era la località dei dati (cache misses)
+
+4. **remove locks:** togliamo tutti i locks e quindi la sincronizzazione (il risultato sarà casuale)  
+    - se diventa molto più veloce allora il problema era la contention del lock (troppi thread che litingano)
 
