--- a/masters/HPC/NVIDIA/5.Thea.md
+++ b/masters/HPC/NVIDIA/5.Thea.md
@@ -1,6 +1,6 @@
 # NVIDIA Thea:
 
-Singolo point of entry (login node con arch x86) con ssh.  
+Singolo entry point (login node con arch x86) con ssh.  
 Due partizioni diverse: 
 - **GH(Grace Hopper)**:  
 - **GG(Grace Grace)**: 
@@ -45,7 +45,7 @@ Stiamo accedendo a un cluster, un insieme di computer collegati tra loro.
 
 **Local: `/local`**  
 
-- Memoria più veloce (è un disco SSD NVMe dentro il nodo di calcolo) ma effimera, viene purgata quanto un job finisce 
+- Memoria più veloce (è un disco SSD NVMe dentro il nodo di calcolo) ma effimera, viene purgata quando un job finisce 
 - workflow: prenoti un nodo, copi i dati da $SCRATCH a /local, lanci il calcolo (che leggerà e scriverà su /local a velocità altissima).  
     Finito il calcolo dobbiamo copiare i dati importanti da /local a $SCRATCH in quanto scaduto il tempo di prenotazione sul nodo, /local viene riformattata. Se non si importa su $SCRATCH si perde il lavoro   
 
@@ -60,7 +60,7 @@ Stiamo accedendo a un cluster, un insieme di computer collegati tra loro.
 <br>
 
 
-### Compilation Node e Parizioni in Slurm:  
+### Compilation Node e Partizioni in Slurm:  
 
 Il login node ha una CPU standard x86 mentre i nodi potenti hanno CPU Grace con architettura ARM aarch64.  
 I programmi compilati sul login node non saranno eseguibili sui compute node perchè parlano lingue differenti!  
@@ -73,7 +73,7 @@ Nel caso Thea avremo:
 - Partizione `gg`: nodi grace grace 
 - Partizione `ggcompile`: dedicata alla compilazione 
 
-La partizione è il nome logico del gruppo, mentre il nodo è il cmputer fisico vero e proprio (gh001, gg005, ggcompile001)  
+La partizione è il nome logico del gruppo, mentre il nodo è il computer fisico vero e proprio (gh001, gg005, ggcompile001)  
 
 <br>
 
@@ -94,7 +94,7 @@ Spack è una sorta di appstore per i supercomputer, invece di scaricare le app g
 Tutte le partizioni del cluster fanno boot della stessa immagine 
 - Ubuntu Linux 24.04
 - CUDA driver compatibili con CUDA 13 (solo su gh)
-- MLNX_OFED_LINUX-24: sono i driver della scheda di rete inifiniband, senza questi la rete ultra veloce 400Gb/s funzionerebbe come una ethernet normale, questi attivano la RDMA (remote directory memory access) che consente al nodo0 di scrivere nella RAM del nodo1 senza disturbare la CPU del nodo1 [driver mellanox e open fabrica enterprise distro]  
+- MLNX_OFED_LINUX-24: sono i driver della scheda di rete inifiniband, senza questi la rete ultra veloce 400Gb/s funzionerebbe come una ethernet normale, questi attivano la RDMA (remote directory memory access) che consente al nodo0 di scrivere nella RAM del nodo1 senza disturbare la CPU del nodo1 [driver mellanox e open fabric enterprise distro]  
 - GNU GCC 13.3.0 (altri compilatori a disposizione da modulefiles)
 
 
@@ -296,14 +296,106 @@ Per aggiungere qualcosa in modo permanente bisogna creare una nuova immagine, e 
 
 
 **Sandbox e repackage**:  
-Permette di scompattare un container in una cartella normale, essendo una cartella puoi scriverci dentro e modificare i file a piaciemento (aggiungere librerire).  
-Una volta modificata la sandbox a piacimento, dobbiamo ricompattarla in un file .sif per poterla usare in futuro con le modifiche apportate e poterla spostare comodamente.  
+
+Sono operazioni che ci permettono di modificare file .sif, utile quando dobbiamo aggiungere librerie o risorse esterne che non esistono nel container attuale.  
+Ricorda: I file .sif sono read-only file system; non li stiamo modificando direttamente, li usiamo come base per costruirne uno nuovo e nel momento in cui è in costruzione singularity aggiungerà ciò che abbiamo specificato, il risultato finale sarà un file .sid nuovo con ciò che ci serve.  
+
+
+Passi: 
+
+**1**: Prendere un nodo del cluster in modalità interattiva:   
+
+```bash
+salloc -n 1 -N 1  -p gh  -t 2:00:00
+```
+
+**2**: Identificare il container di partenza da estendere e prepariamo l'ambiente:   
+```bash
+export CONT_DIR = "global/exafs/groups/gh/sif"
+export CONT_NAME = "pytorch-25.01-py3.sif"
+export APPTAINER_TMPDIR = "/local/${SLURM_JOBID}/_tmp_singularity"
+export APPTAINER_CACHEDIR = "/local/${SLURM_JOBID}/_cache_singularity"
+rm -rf ${APPTAINER_TMPDIR} && mkdir -p ${APPTAINER_TMPDIR}
+rm -rf ${APPTAINER_CACHEDIR} && mkdir -p ${APPTAINER_CACHEDIR}
+```
+
+**3**: Facciamo una copia in `/local` del container di base in quanto lettura e scrittura sono molto più veloci in tale directory:  
+
+```bash
+cp ${CONT_DIR}/${CONT_NAME} /local/${SLURM_JOBID}/
+```
+
+**4**: Creiamo un _Singularity Definition File_  
+
+_nota:_ NGC è il sito web di Nvidia dove mettono i container ottimizzati per le loro GPU (con CUDA, PyTorch, ecc già pronti). L'immagine di base .sif viene da lì; Possiamo partire da queste immagini di base NVIDIA ed estenderle con ciò che ci serve tramite il Singularity Definition File (ciò che vogliamo estendere lo includiamo nella clausola `%post`)  
+
+
+```bash
+cat > custom-pytorch.def << EOF
+Bootstrap: localimage 
+From: /local/${SLURM_JOBID}/${CONT_NAME}
+
+%post
+    apt-get update
+    apt-get -y install python3-venv
+    pip install --upgrade pip 
+    pip install transformers accelerate huggingface_hub
+EOF
+```
+
+Una volta fatto ciò abbiamo 2 opzioni:  
+
+1. **Creare la sandbox sullo storage del cluster:** 
+    Permette di scompattare un container in una cartella normale, essendo una cartella puoi scriverci dentro e modificare i file a piaciemento (aggiungere librerire).  
+    Una volta modificata la sandbox a piacimento, dobbiamo ricompattarla in un file .sif per poterla usare in futuro con le modifiche apportate e poterla spostare comodamente.    
+
+```bash
+cd ${SCRATCH}
+singularity build --sandbox custom-python-sandbox custom-pytorch.def 
+
+# una volta creata la sandbox entriamo in modalità shell 
+singularity shell --writable --fakeroot --nv custom-python-sandbox
+```
+
+Con questo metodo una volta creata la sandbox vedremo in $SCRATCH una cartella `custom-python-sandbox`, se entriamo vedremo i contenuti come /bin /etc /usr /val ...  
+Abbiamo il sistema operativo del container esploso sul disco del cluster.  
+Entriamo con `singularity shell --writable --fakeroot`, aggiungiamo ciò che ci serve a mano e quando siamo pronti a sigillare l'immagine faremo:  
+
+```bash
+singularity build finale.sif custom-python-sandbox/
+
+# una volta finito e testato puliamo lo storage e cancelliamo la sandbox 
+rm -rf custom-python-sandbox
+```
+
+
+<br>
+
+2. **Creare una nuova immagine .sif direttamente**    
+    È l'opzione che possiamo usare quando vogliamo creare in un colpo singolo e automaticamente la nuova immagine .sif; Possiamo farlo quando siamo sicuri che tutti gli step in `%post` eseguano senza bisogno di intervento manuale.  
+
+```bash 
+cd ${SCRATCH}
+singularity build custom-pytorch.def ./custom-pytorch.sif 
+
+# una volta completato possiamo eseguirlo su nodo interattivo e su shell
+singularity shell --nv custom-pytorch.sif
+```
 
 
 
+<br>
 
+<br>
+
+--- 
+
+<br>
 
 ### Extra:  
+
+
+**/global/exafs/groups/...**   
 
 La cartella `/global/exafs/groups/...` è una cartella di sistema gestita dagli amministratori, lì non abbiamo permesso di scrittura!  
 Possiamo solo leggere e copiare il contenuto.  
@@ -311,13 +403,17 @@ I nostri file e container .sif dobbiamo metterli nella nostra cartella $SCRATCH
 
 <br>
 
-Abbiamo la nostra cartella $HOME e $SCRATCH, queste sono visibili **ovunque** (da tutti i nodi del cluster) grazie al fatto che sono montate su un NFS (network file system).  
+**/local**:    
+Abbiamo la nostra cartella $HOME e $SCRATCH, queste sono visibili **ovunque** (da tutti i nodi del cluster) grazie al fatto che sono montate su un NAS che usa NFS (network file system).  
 La cartella /local è privata ad ogni nodo!!! ed è anche per questo che local è velocissimo ed il motivo per il quale viene formattata ogni volta che un job termina (per lasciarlo pulito al prossimo utente).  
 Quando facciamo `singularity run --nv container.sif` verrà aperto il container e _automaticamente_ si rendono visibile dentro il container la cartella corrente, la $HOME e la $SCRATCH.  
 
 <br>
 
-Cosa succede quando apro un container con Singularity?  
+**Cosa succede quando apro un container con Singularity?**  
+
+
+
 Quando lanciamo `singularity run mio_container.sif` **non avviene nessuno spacchettamento su disco**, non si crea nessuna cartella temporanea con dentro i suoi dati.  
 Succede che il Kernel dell'OS di Thea prende il file .sif e lo monta come se fosse un disco virtuale (loopback mount), è un operazione immediata.   
 Per il processo dentro il container singularity fa un operazione chiamata **overlay**, sostituisce ciò che vede il processo del container.
@@ -333,7 +429,7 @@ Non puoi installare librerie o altro al volo dentro il .sif, puoi scrivere solam
 
 <br>
 
-Ciclo di vita di un container: Dipende dal comando che usiamo!  
+**Ciclo di vita di un container: Dipende dal comando che usiamo!**     
 
 1. `singularity run my_container.sif`  
     Il container nasce, viene eseguita l'azione di default del container (parte subito il programma target) e quando tale programma termina il container **muore**!  
@@ -346,4 +442,52 @@ Ciclo di vita di un container: Dipende dal comando che usiamo!
     Possiamo avviare il programma che ci interessa e una volta terminato il container rimane in vita! Per uscire dal container dobbiamo scrivere `exit` e solo dopo muore il container.  
 
 
-immagine vecchia sul disco di rete, lettura lente e intasa la rete per tutti. 
+<br>
+
+
+**NAS (hardware) e NFS (protocollo) :**    
+
+- NAS sta per **Network Attached Storage**, è un server che contiene dati, li restituisce a chi li chiede (come un pc dedicato esclusivamente a conservare file)  
+
+- NFS sta per **Network File System**, è il protocollo (set di regole) che permette a un nodo di parlare con NAS; È grazie a NFS se il nodo1 può convincere il suo sistema operativo che una cartella che si trova fisicamente sul NAS sia in realtà 'presente' dentro /home/utente.  
+
+Se sono su un cluster che usa queste tecnologie (come Thea) posso vedere la mia home da qualsiasi nodo! MA i file NON sono distribuiti tra i nodi, i file sono tutti fermi dentro al NAS, i vari nodi montano le cartelle tramite il protocollo NFS.  
+Per i nodi è come se i dati fossero locali, ma ogni volta che apri un file, il protocollo NFS corre a chiederlo al NAS in tempo reale.  
+
+<br>
+
+
+**Rallentare il sistema per tutti:**  
+
+La directory `$HOME` non si trova nel nodo / computer fisico che stiamo usando, si trova su un server di storage centrale (NAS) ed collegato a tutti i nodi tramite la rete infiniband (usando protocollo NFS).  
+Il sistema di storage NFS è come un imbuto unico, tutti i nodi devono pasasre per quel singolo cavo/server per leggere la propria home.  
+
+Se lanciamo un programma in `$HOME` che scrive e cancella 10.000 piccoli file al secondo:
+- il login node bombarda il server NFS di richieste "scrivi file A", "scrivi file B", ...
+- il server NFS ha un limite di operazioni al secondo, e con l'operazione sopra le stiamo consumando tutte.  
+- se un utente su un altro nodo prova a fare una `ls` vedrà il suo terminale freezarsi e metterci magari 10 secondi per fare la `ls`
+- per questo motivo si usa $SCRATCH che è un sistema parallelo fatto apposta per gestire questo tipo di operazioni.  
+
+
+
+**$HOME vs $SCRATCH**:  
+
+- `$HOME`: Usa NAS classico con NFS standard
+    - Single-head: un singolo processore (CPU) dentro il NAS che gestisce il traffico 
+    - Serializzazione: se devo leggere 10.000 file mando 10.000 richieste a quel singolo processore 
+    - anche se il processore è veloce, se le richieste sono troppe si crea una coda 
+    - se un altro utente fa `ls` deve aspettare che la coda si liberi (e quindi vedrà un rallentamento notevole e fastidioso!!!) 
+
+- `$SCRATCH`: DDN exascale NVMe, progettato a più server con GPFS(parallel file system)  
+    - Multi-head: Non c'à un solo server, ci sono tanti serve che lavorano insieme 
+    - **Striping**: quando si copia un file grosso (es.10GB) su $SCRATCH, il sistema lo distribuisce sui vari server (un pezzo su serverA, un altro su serverB, ...)  
+    - Accesso Parallelo: quando leggi il file grosso, il nodo scarica i pezzi da tutti server che lo contengono _contemporaneamente_, molto più veloce!  
+    - NVMe + RDMA: usano tecnologia NVMe (velocissima) e RDMA (remote direct memory access) su infiniband, permette di fare passare i dati dai dischi alla RAM senza disturbare la CPU.  
+
+**_Nota_**: se rallenti il nodo di login (facendo un lavoro pesante su $HOME), rallenti anche gli altri utenti, anche se loro sono su $SCRATCH e non su $HOME!!  
+Il terminale degli altri utenti (shell) dipende dalla $HOME:
+- ogni volta che si lancia un comando la shell scrive in `.bash_history` che si trova nella sua home
+- il prompt del terminale legge file di configurazione `.bashrc` che si trovano nella home
+- le chiavi SSH per connetersi si trovano nella home `.ssh/`  
+Quindi se saturiamo la $HOME rallentiamo tutti ovunque si trovino!
+
