OpenMP: tasking model & dependencies

--- a/masters/HPC/Teoria/8.OpenMP_1.md
+++ b/masters/HPC/Teoria/8.OpenMP_1.md
@@ -54,7 +54,7 @@ Breakdown di cosa offre OpenMP
 
 - **Runtime Library**: funzioni utili  
     - `omp_get_thread_num()`: restituisce id thread
-    - `omp_thet_num_threads()`: quanti thread ci sono in totale 
+    - `omp_get_num_threads()`: quanti thread ci sono in totale 
 
 
 
@@ -62,7 +62,8 @@ Esempi:
 
 
 ```cpp
-int main(){
+int main()
+{
     #pragma omp parallel 
     {
         printf("Hello World!");
@@ -100,7 +101,7 @@ __Note__:
 
 - se non avessimo definito come private la variabile id, allora tutti i thread avrebbero scritto nella stessa cella di memorai il proprio valore, tipica condizione di data race
 
-- le variabili private definite fuori dal blocco pragma non sono inizalizzate! se avessimo definito `a` come privata, dentro il blocco omp questa variable avrebbe restituito valori spazzatura.
+- **le variabili private definite fuori dal blocco pragma non sono inizalizzate!** se avessimo definito `a` come privata, dentro il blocco omp questa variable avrebbe restituito valori spazzatura.
 
 
 
@@ -264,7 +265,7 @@ Invece di fare litigare i thread su una variabile globale condivisa, creiamo una
 
 - `pragma omp single`:  
     Concettualmente uguale alla master, ma il codice racchiuso in tale sezione viene eseguito dal primo thread che raggiunge questa zona.  
-    - **attenzione**: C'è una barriera esplicita alla fine di questo blocco! gli altri thread saltano il blocco e si aspettano che il thread 'prescelto' finisca il suo lavoro (spesso single si usa per caricare dati condivisi che servono anche agli altri), c'è comunque la possibilità di usare la `nowait`.  
+    - **attenzione**: C'è una barriera esplicita alla fine di questo blocco! gli altri thread saltano il blocco e aspettano che il thread 'prescelto' finisca il suo lavoro (spesso single si usa per caricare dati condivisi che servono anche agli altri), c'è comunque la possibilità di usare la `nowait`.  
 
 
 
@@ -293,7 +294,7 @@ int main(){
 Guardiamo il grafico delle dipendenze per individuare task paralleli e notiamo che che le prime 3 funzioni sono parallelizabili.  
 Le ultime due dipendono dalle prime 3, quindi dovranno aspettare.  
 
-[grafo dipendenze](../../images/grafo_dipendenze.png.png)
+![grafo dipendenze](../../images/grafo_dipendenze.png.png)
 
 
 Il task parallelism si implementa in OpenMP con `#pragma omp parallel sections`, e nel blocco sottostante vanno specificate le funzioni che dovranno essere parallelizate con la direttiva `section`.  
@@ -320,3 +321,8 @@ int main()
     printf("%f\n", z);
 }
 ```
+
+
+<br>
+
+---
